k8s-monitoring/01-prom-op-slo-tutorial/assets/error-service/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: error-service
  labels:
    app: error-service
spec:
  selector:
    app: error-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
