k8s-monitoring/01-prom-op-slo-tutorial/assets/error-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: error-service
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: error-service
spec:
  rules:
    - http:
        paths:
          - path: /ok
            pathType: Exact
            backend:
              serviceName: error-service
              servicePort: 80
          - path: /error
            pathType: Exact
            backend:
              serviceName: error-service
              servicePort: 80
